# dias

./: CHANGELOG.md  Cargo.toml  README.md  release.toml  test-all
.github/workflows/: test.yml
src/: availability.rs  lib.rs
src/cmd_line/: dummy.rs  generic.rs  mod.rs  shared.rs  standard.rs  web.rs
src/config/: generic.rs  mod.rs  standard.rs  web.rs
src/exit/: dummy.rs  generic.rs  mod.rs  standard.rs
src/storage/: boxable.rs  generic.rs  mod.rs
src/storage/memory/: file_sys.rs  mod.rs  readers_writers.rs  storage.rs
src/storage/standard/: mod.rs  storage.rs  write.rs
src/storage/web/: binary_values.rs  mod.rs  storage.rs  text_values.rs
