[package]
name = "dias"
version = "0.1.1"
edition = "2021"

description = "Minimal cross-platform support for common platform specific things, intended for small games for web plus desktopy platforms."
license-file = "LICENCE.txt"
readme = "README.md"
keywords = ["gamedev", "wasm"]
repository = "https://github.com/theq629/dias"

[features]
default = ["exit", "storage", "cmd-line", "config"]
exit = []
storage = ["dep:directories", "dep:atomic-write-file", "dep:web-sys", "web-sys/Window", "web-sys/Storage"]
cmd-line = ["dep:lexopt", "dep:web-sys", "web-sys/Window", "web-sys/Location", "web-sys/UrlSearchParams"]
config = ["dep:serde", "dep:toml", "dep:serde_json"]

[dependencies]
serde = { version="1.0", optional=true, default-features=false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { version="5.0", optional=true }
atomic-write-file = { version="0.1", optional=true }
lexopt = { version="0.3", optional=true }
toml = { version="0.8", optional=true }

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"
web-sys = { version="0.3", optional=true }
serde_json = { version="1.0", optional=true }

[dev-dependencies]
serde = { version="1.0", default-features=false, features=["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = "3.9"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
